tests/errors/tc_expr_unary_inc.lx
@module "main"

pub const main -> fn () int {
    let x: int = 5;
    ++x;
    let y: str = "hello";
    ++y;
    return 0;
}
